cookbooks/env/files/default/iptables-rules
# Generated by iptables-save v1.4.21 on Tue May 17 11:21:56 2016
*filter
:INPUT DROP [21:2646]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [2:456]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 22 -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 443 -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 53 -j ACCEPT
-A INPUT -i eth0 -p udp --dport 53 -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 465 -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 993 -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 25 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Tue May 17 11:21:56 2016
